deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name:  deployments
spec:
  replicas: 2
  template:
    metadata: 
      name: deployment
      labels:
        objecttype: deployment
    spec:
     containers:
       - image:  image
         name:  my-name
