liveprobe.yml
apiVersion: v1
kind: Pod
metadata:
  name: liveness
  labels:
    name: mylivenessprobe
spec:
  containers:
  - name: liveness
    image: ubuntu
    args:
      - /bin/sh
      - -c
      - touch /tmp/healthy; sleep 1000
    livenessProbe:
      exec:
        command:
          - cat
          - /tmp/healthy
      initialDelaySeconds: 5
      periodSeconds: 5
      timeoutSeconds: 30
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
