liveprobeurl.yml
apiVersion: v1
kind: Pod
metadata:
  name: livenessurl
  labels:
    name: livenessurl
spec:
  containers:
  - name: c001
    image: httpd
    resources:
        memory: "128Mi"
        cpu: "500m"
    livenessProbe:
        initialDelaySeconds: 2
        periodSeconds: 5
        httpGet:
          path: /
          port: 80
    ports:
      - containerPort: 80
