podswithports.yml
apiVersion: v1
kind: Pod
metadata: 
  name: testservice
  labels:
    myvalue: demo
spec:
  containers:
    - name: c02
      image: httpd
      ports:
        - containerPort: 80
