volsecret.yml
apiVersion: v1
kind: Pod
metadata:
  name: myvolsecret
spec:
  containers:
  - name: myapp
    image: centos
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    volumeMounts:
      - name:  testsecret
        mountPath:  "/tmp/secrets"
  volumes:
    - name:  testsecret
      secret: 
        secretName: mysecret
