service.yml
kind: Service
apiVersion: v1
metadata:
  name:  demosevice
spec:
  selector:
    myvalue:  demo  # apply this service to any pod which has this specified label
  ports:
  - name:  name-of-the-port
    port:  80
    targetPort:  8080
